<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ir.salimi.ehsan.passgen.MainActivity"
    android:id="@+id/RL">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Tx_show_pass"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:inputType="none"
            android:layout_centerVertical="true"
            android:textAlignment="center"
            android:enabled="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/Tx_rate"
            android:layout_alignParentBottom="false"
            android:layout_alignStart="@+id/spinner"
            android:layout_below="@+id/Tx_show_pass"
            android:layout_toStartOf="@+id/B_clear"
            android:textAlignment="center"
            android:textSize="25sp" />

        <Spinner
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:id="@+id/spinner2"
            android:dropDownWidth="wrap_content"
            android:entries="@array/pass_type"
            android:layout_alignBaseline="@+id/textView"
            android:layout_alignBottom="@+id/textView"
            android:layout_alignStart="@+id/Tx_rate"
            android:textAlignment="center"
            android:spinnerMode="dropdown" />

        <Spinner
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:id="@+id/spinner"
            android:entries="@array/number"
            android:dropDownWidth="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignStart="@+id/B_send"
            android:textAlignment="center"
            android:spinnerMode="dropdown" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pass_number"
            android:id="@+id/Tx_passnumber"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:textSize="20sp"
            android:textColor="#1976d2" />


        <Button
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/generate"
            android:id="@+id/B_gen"
            android:onClick="onclick_gen"
            android:layout_above="@+id/B_clear"
            android:layout_toStartOf="@+id/B_clear"
            android:textColor="#ffffff"
            android:backgroundTint="#1976d2" />

        <Button
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:id="@+id/B_copy"
            android:text="@string/copy"
            android:onClick="onclick_copy"
            android:layout_alignTop="@+id/B_clear"
            android:layout_toStartOf="@+id/spinner2"
            android:textColor="#ffffff"
            android:backgroundTint="#1976d2" />

        <Button
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:id="@+id/B_clear"
            android:text="@string/clear"
            android:onClick="onclick_clear"
            android:layout_above="@+id/B_send"
            android:layout_toEndOf="@+id/B_send"
            android:textColor="#ffffff"
            android:backgroundTint="#1976d2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pass_type"
            android:id="@+id/textView"
            android:layout_marginTop="52dp"
            android:layout_below="@+id/Tx_rate"
            android:layout_alignEnd="@+id/Tx_passnumber"
            android:textSize="20sp"
            android:textColor="#1976d2" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:id="@+id/B_send"
            android:onClick="onSend"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="26dp"
            android:textColor="#ffffff"
            android:backgroundTint="#1976d2" />

    </RelativeLayout>